# project3

./: eda_analysis.py  main_notebook.ipynb  project3-0.1.0-py3-none-any.whl  pyproject.toml  setup.py
python_scripts/: data_processing.py  research_questions.py
